--- a/Birding Local/Info.plist
+++ b/Birding Local/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SF-Pro-Text-Regular.otf</string>
+		<string>SF-Pro-Text-Medium.otf</string>
+		<string>SF-Pro-Text-Bold.otf</string>
+		<string>SF-Pro-Text-Semibold.otf</string>
+	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Birding Local uses your location to find birds near you!</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
