--- a/Birding Local/Info.plist
+++ b/Birding Local/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIdentifier</key>
+	<string></string>
+	<key>NSLocationUsageDescription</key>
+	<string>Birding Local uses your location to find birds near you!</string>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>BiIntent</string>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SF-Pro-Text-Regular.otf</string>
@@ -9,10 +17,6 @@
 		<string>SF-Pro-Text-Bold.otf</string>
 		<string>SF-Pro-Text-Semibold.otf</string>
 	</array>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Birding Local uses your location to find birds near you!</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Birding Local uses your location to find birds near you!</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
