--- a/Birding Local/Birding Local.entitlements
+++ b/Birding Local/Birding Local.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.BirdingLocal</string>
+		<string>group.BirdGroup</string>
 	</array>
 </dict>
 </plist>
