--- a/Bird Widget/Info.plist
+++ b/Bird Widget/Info.plist
@@ -6,6 +6,8 @@
 	<array>
 		<string>SF-Pro-Text-Regular.otf</string>
 		<string>SF-Pro-Text-Medium.otf</string>
+		<string>SF-Pro-Text-Bold.otf</string>
+		<string>SF-Pro-Text-Semibold.otf</string>
 	</array>
 	<key>NSExtension</key>
 	<dict>
